Archive2/dc/38923393fbcba3/output
main.cpp: In function 'int main()':
main.cpp:31:23: error: invalid use of non-static member function 'void A::funcion(std::string, int)'
     thread helper3(A::funcion,"En ",10);
                       ^
